--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="./public/pink-flower.png" />
+    <link rel="icon" type="image/png" href="./img/pink-flower.png" />
+    <link rel="stylesheet" href="./src/style.css" />
     <title>paper petals</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="./src/home.tsx"></script>
   </body>
 </html>
