--- a/commission/index.html
+++ b/commission/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="../src/gallery.tsx"></script>
+    <script type="module" src="../src/commission.tsx"></script>
   </body>
 </html>
